--- a/app/client/src/layouts/Layout.astro
+++ b/app/client/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import "@fontsource-variable/pixelify-sans";
+import { ViewTransitions } from "astro:transitions";
 
 export interface Props {
   title: string;
@@ -16,6 +17,7 @@ const { title } = Astro.props;
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
+    <ViewTransitions />
     <title>{title}</title>
   </head>
   <body>
