--- a/app/client/src/components/Aside.astro
+++ b/app/client/src/components/Aside.astro
@@ -1,11 +1,10 @@
 ---
-type Tabs = "Notes" | "Settings";
+type Tabs = "Notes" | "Settings" | "Help";
 
 interface Tab {
   tab: Tabs;
   icon: string;
   href: string;
-  className?: string;
 }
 
 export interface Props {
@@ -23,26 +22,32 @@ const tabs: Tab[] = [
     icon: "⚙️",
     href: "/settings",
   },
+  {
+    tab: "Help",
+    icon: "❓",
+    href: "/help",
+  },
 ];
 
 const { currentTab } = Astro.props;
 ---
 
-<aside class="border-r">
-  <nav class="flex flex-col gap-2 pr-2">
-    <div class="w-full px-8 pt-2">
-      <a href="/note/new">
-        <svg class="bg-blue-500 bg-opacity-25 rounded-xl" viewBox="0 0 24 24"
-          ><path fill="currentColor" d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
-          ></path></svg
-        >
-      </a>
-    </div>
+<aside
+  class="border-r border-neutral-600 resize-x overflow-auto max-w-72 min-w-48 w-min"
+>
+  <nav class="flex flex-col gap-2 pr-2 pt-2">
+    <a
+      href="/note/new"
+      class="bg-blue-500 bg-opacity-25 rounded flex justify-center items-center gap-2 mb-2"
+    >
+      <span class="text-4xl">+</span>
+      <span class="text-center">New Note</span>
+    </a>
     {
-      tabs.map(({ tab, icon, href, className }) => (
+      tabs.map(({ tab, icon, href }) => (
         <a
           class="rounded p-1 bg-neutral-500"
-          class:list={[currentTab === tab ? " bg-opacity-35" : "bg-opacity-15"]}
+          class:list={[currentTab === tab ? "bg-opacity-35" : "bg-opacity-15"]}
           href={href}
         >
           {icon} {tab}
